Try to fix some crashes from calling PresShell methods after Destroy() has called.  Bug 235395, r+sr=roc.